Integrated BerryMotesGallery
A few changes:

- BerryMotesGallery is now part of BerryMotesApp. No external viewer
  necessary

- NSFW emotes removed. Because of this there is also a new sync server.

- Added option to report emotes

- Logfiles are now uploaded to the api server, not just send via mail.

- Subreddit list is now downloaded from the sync server. Because of this
  we can also show how big a subreddit is and if it was added recently.
  Fixes #1